# boid-wars

./: .dockerignore  .editorconfig  .env.development  .env.example  .gitignore  ARCHITECTURE.md  BRAINLIFT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENVIRONMENT_IMPLEMENTATION_PROPOSAL.md  LICENSE  Makefile  NOTES.md  README.md  ROADMAP.md  SYSTEM_ARCHITECTURE.md  VISUAL_EFFECTS_PLAN.md  clippy.toml  development_tools.md  docker-compose.yml  fly.toml  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bevy-client/: Cargo.toml  assets  build-quick.sh  build-release.sh  build-wasm.sh  demo.html  index.html
bevy-client/src/: health_events.rs  lib.rs
client/: .eslintrc.json  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts
client/src/: debug-panel.ts  logger.test.ts  logger.ts  main.ts  perf.ts
docs/: AI_BEHAVIORS.md  README.md  architecture-decisions.md  development.md  security-checklist.md  troubleshooting.md
docs/architecture/: COORDINATE_SYSTEM_REFACTOR.md  POSITION_SYNC_ARCHITECTURE.md  POSITION_SYNC_IMPLEMENTATION.md
docs/archive/: LIGHTYEAR_MIGRATION_PROPOSAL_COMPLETED.md  PLAYER_PHYSICS_IMPLEMENTATION_PROPOSAL.md  README.md
docs/debug/: LIGHTYEAR_WEBTRANSPORT_ISSUE.md
docs/deployment/: FLY_IO_DEPLOYMENT_PLAN.md
docs/design/: BOID_GROUP_SYSTEM.md  COMBAT_DESIGN.md  OBSTACLE_AVOIDANCE_PROPOSAL.md
docs/development/: CODING_STANDARDS.md  DEVELOPMENT.md  QUICK_REFERENCE.md  SETUP_GUIDE.md  WEBTRANSPORT_GUIDE.md
docs/fixes/: DESPAWN_WARNING_FIX.md  POSITION_DRIFT_FIX.md
docs/proposals/: ASSET_INTEGRATION_PROPOSAL.md  AUDIO_SYSTEM_PROPOSAL.md  DEVELOPMENT_WORKFLOW_TESTING_PROPOSAL.md  ELITE_BOSS_IMPLEMENTATION_PROPOSAL.md  NETWORKING_ALTERNATIVES_PROPOSAL.md  PIXI_INTEGRATION_PROPOSAL.md  PIXI_PERFORMANCE_OPTIMIZATION_PROPOSAL.md  PLAYER_PHYSICS_IMPLEMENTATION_PROPOSAL.md  SHOOTING_SYSTEM_LIBRARIES_PROPOSAL.md  SPATIAL_OPTIMIZATION_PROPOSAL.md  claude-code-enemy-generation.md  flocking-implementation.md  hetzner-webtransport-deployment.md  incremental-multiplayer-implementation.md
docs/reviews/: PHYSICS_IMPLEMENTATION_STAFF_REVIEW.md
docs/technical/: ARCHITECTURE_REVIEW.md  ASSET_STRATEGY.md  CLIENT_EVOLUTION.md  LIGHTYEAR_0.21_API.md  TECH_STACK_RESEARCH.md  tech_stack_integration_validation.md
lightyear-wasm/: Cargo.toml
lightyear-wasm/src/: lib.rs
scripts/: build-wasm-debug.sh  build-wasm.sh  cert-info.sh  check-prereqs.sh  deploy-hetzner.sh  deploy.sh  download-firefox-132.sh  get-started.sh  launch-chrome-dev.sh  optimize-images.sh  run-server.sh  setup-certs.sh  simple-http-ws-proxy.py  start-production.sh  test-connection.sh
server/: Cargo.toml
server/benches/: physics_benchmark.rs  spatial_grid_bench.rs
server/src/: config.rs  debug_ui.rs  despawn_utils.rs  flocking.rs  health.rs  health_sync.rs  lib.rs  main.rs  physics.rs  pool.rs  position_sync.rs  simple_debug_ui.rs  simple_flocking.rs  spatial_grid.rs
server/src/groups/: combat.rs  formation.rs  mod.rs  movement.rs  territory.rs
server/src/physics/: collision.rs  combat.rs  core.rs  input.rs  movement.rs
server/tests/: integration_test.rs  physics_sync_test.rs  pool_test.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  protocol.rs
tests/: README.md  bevy-client-webtransport.html
tests/scripts/: test-webtransport.sh
