[workspace]
members = [
    "shared",
    "server",
    "lightyear-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Boid Wars Team"]

[workspace.dependencies]
# Shared dependencies with consistent versions
bevy = "0.16"
lightyear = { version = "0.21", default-features = false }
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1


