[package]
name = "boid-wars-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local
boid-wars-shared = { path = "../shared" }

# Core
lightyear = { workspace = true, features = ["webtransport"] }
serde = { workspace = true }

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]