[package]
name = "boid-wars-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local
boid-wars-shared = { path = "../shared" }

# Core
lightyear = { workspace = true, features = ["client", "websocket"], default-features = false }
serde = { workspace = true }

# WASM
wasm-bindgen = "0.2"
web-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.wasm-pack.web]
rustflags = ["--cfg", "getrandom_backend=\"wasm_js\""]

[dev-dependencies]