[package]
name = "boid-wars-server"
version.workspace = true
edition.workspace = true

[dependencies]
# Local
boid-wars-shared = { path = "../shared" }

# Core
bevy = { workspace = true }
lightyear = { workspace = true }
serde = { workspace = true }

# Physics
bevy_rapier2d = "0.30"

# Spatial
rstar = "0.12"

# Random
rand = "0.8"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


# Debug UI (dev builds only)
bevy-inspector-egui = "0.32"
bevy_egui = "0.35"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_benchmark"
harness = false

[[bench]]
name = "spatial_grid_bench"
harness = false
